Update with latest changes after successful build
